First pages commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 My Page
+
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>Activity 1: Basic HTML Bio about Dann Taylor</title>
+</head>
+
+<body>
+  <h1>
+    "Dann Taylor"
+  </h1>
+
+  <!-- Image -->
+  <img src="/Users/danieltaylor/Desktop/NUCHI201902DATA1/Lessons/11-Web/2/Activities/01-Stu_HTMLBio/Unsolved/assets.Taylor-39.jpg" alt="Headshot" />
+
+
+  <br>
+
+
+</body>
+
+</html>
